<resources>
    <string name="app_name">باقي على</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="time">الوقت</string>
    <string name="date">تاريخ</string>
    <string name="add">أضافة</string>
    <string name="enterDateTime">ادخل الموعد</string>
    <string name="dateTest">00 / 00 / 0000</string>
    <string name="timeTest">00 : 00 AM</string>
</resources>