<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp">

                <ImageButton
                    android:id="@+id/dismissBtn"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_alignParentStart="true"
                    android:background="@android:color/transparent"
                    android:src="@drawable/close_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/enterDateTime"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/addBtn"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:alpha=".2"
                    android:background="@android:color/transparent"
                    android:src="@drawable/done_24"
                    android:textColor="#41808080" />


            </RelativeLayout>


            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="end"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/baqi_ala_name">

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_toStartOf="@+id/dateBtn"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:text="@string/dateTest"
                        android:textStyle="bold" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/dateBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="16dp"
                        app:cardBackgroundColor="@color/black"
                        app:cardCornerRadius="25dp"
                        app:layout_constraintEnd_toEndOf="parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:paddingStart="16dp"
                            android:paddingEnd="16dp"
                            android:text="@string/date"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:textSize="18sp" />
                    </androidx.cardview.widget.CardView>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/baqi_ala_name">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/timeBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="16dp"
                        app:cardBackgroundColor="@color/black"
                        app:cardCornerRadius="25dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:paddingStart="16dp"
                            android:paddingEnd="16dp"
                            android:text="@string/time"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:textSize="18sp" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_toStartOf="@+id/timeBtn"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:text="@string/timeTest"
                        android:textStyle="bold" />
                </RelativeLayout>




            </LinearLayout>


            <EditText
                android:id="@+id/baqi_ala_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
